force-app/main/default/objects/Community__c/Community__c.object-meta.xml
<CustomObject>
    <label>Community Roles</label>
    <nameField>
        <displayFormat>CM- {0000}</displayFormat>
        <label>Role AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>