force-app/main/default/objects/Community__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Contact_Name__r.Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>