force-app/main/default/objects/Community__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Contact.AccountID</description>
    <formula>CASESAFEID(Contact_Name__r.AccountId)</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>