force-app/main/default/objects/Community__c/fields/Appointed_By__c.field-meta.xml
<CustomField>
    <fullName>Appointed_By__c</fullName>
    <label>Appointed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Appointed_By</valueSetName>
    </valueSet>
</CustomField>