force-app/main/default/objects/Community__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <formula>Contact_Name__r.Email</formula>
    <label>ContactEmail</label>
    <type>Text</type>
</CustomField>