force-app/main/default/objects/Community__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Role End</label>
    <type>Date</type>
</CustomField>