force-app/main/default/objects/Community__c/fields/gp_subscriber_id__c.field-meta.xml
<CustomField>
    <fullName>gp_subscriber_id__c</fullName>
    <label>gp_subscriber_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>