force-app/main/default/objects/Community__c/fields/LeadEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadEmail__c</fullName>
    <formula>Lead_Name__r.Email</formula>
    <label>LeadEmail</label>
    <type>Text</type>
</CustomField>