force-app/main/default/objects/Community__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <formula>Project_Name__r.Parent_Project__r.Name</formula>
    <label>Parent Project</label>
    <type>Text</type>
</CustomField>