force-app/main/default/objects/Community__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Role Start</label>
    <type>Date</type>
</CustomField>