force-app/main/default/objects/Community__c/fields/update_check__c.field-meta.xml
<CustomField>
    <fullName>update_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>donto use</description>
    <label>update check</label>
    <type>Checkbox</type>
</CustomField>