force-app/main/default/objects/Community__c/fields/Update_Sync__c.field-meta.xml
<CustomField>
    <fullName>Update_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be enabled by workflow when Status field is changed and GRoups.io sync will disable back</description>
    <label>Update Sync</label>
    <type>Checkbox</type>
</CustomField>