force-app/main/default/objects/Community__c/fields/Votind_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Votind_Start_Date__c</fullName>
    <label>Voting Start</label>
    <type>Date</type>
</CustomField>