force-app/main/default/objects/Community__c/fields/Voting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Voting_End_Date__c</fullName>
    <label>Voting End</label>
    <type>Date</type>
</CustomField>