force-app/main/default/objects/Community__c/fields/Voting_Status__c.field-meta.xml
<CustomField>
    <fullName>Voting_Status__c</fullName>
    <label>Voting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voting Rep</fullName>
            </value>
            <value>
                <fullName>Alternate Voting Rep</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>