force-app/main/default/objects/Community__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Type__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Contact_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>