force-app/main/default/objects/Community__c/listViews/CD_Foundation.listView-meta.xml
<ListView>
    <fullName>CD_Foundation</fullName>
    <columns>Contact_Name__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Appointed_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>contains</operation>
        <value>Continuous Delivery</value>
    </filters>
    <label>CD Foundation</label>
</ListView>