force-app/main/default/objects/Community__c/listViews/cdf.listView-meta.xml
<ListView>
    <fullName>cdf</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>equals</operation>
        <value>CD Foundation</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>cdf</label>
</ListView>