force-app/main/default/objects/Community__c/listViews/CNCF_ML.listView-meta.xml
<ListView>
    <fullName>CNCF_ML</fullName>
    <columns>Type__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Role__c</columns>
    <columns>End_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>startsWith</operation>
        <value>CLoud</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Mailing List</value>
    </filters>
    <label>CNCF ML</label>
</ListView>