force-app/main/default/objects/Community__c/listViews/CNCF_TOC.listView-meta.xml
<ListView>
    <fullName>CNCF_TOC</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Role__c</columns>
    <columns>Appointed_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>startsWith</operation>
        <value>Cloud Native Computing Foundation</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Committee</value>
    </filters>
    <label>CNCF TOC</label>
</ListView>