force-app/main/default/objects/Community__c/listViews/Hyperledger_ML.listView-meta.xml
<ListView>
    <fullName>Hyperledger_ML</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Appointed_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Mailing List</value>
    </filters>
    <filters>
        <field>Project_Name__c</field>
        <operation>startsWith</operation>
        <value>hyper</value>
    </filters>
    <label>Hyperledger ML</label>
</ListView>