force-app/main/default/objects/Community__c/listViews/Last_week.listView-meta.xml
<ListView>
    <fullName>Last_week</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Mailing List</value>
    </filters>
    <label>Last week</label>
</ListView>