force-app/main/default/objects/Community__c/listViews/no_mailing_list.listView-meta.xml
<ListView>
    <fullName>no_mailing_list</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Mailing List</value>
    </filters>
    <label>no mailing list</label>
</ListView>